@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="iso-8859-1" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
-<!-- $Id: docs.html,v 1.4 2005-05-26 04:57:50 jklowden Exp $ -->
+<!-- $Id: docs.html,v 1.5 2006-03-24 18:06:17 jklowden Exp $ -->
 <head>
 <title>FreeTDS.org</title>
 </head>
@@ -47,7 +47,7 @@ The FreeTDS <a href="/userguide/">User Guide</a> covers how to use FreeTDS to do
 
 <tr><td>&nbsp;</td></tr>
 <tr><td>
-The FreeTDS <a href="/reference/">Reference Manual</a> is our start at documenting the APIs.  In general, the definitive API documentation is available online from the vendors.  It will be a big job for us to replace that, and at the rate we're going, we never will.  Our first goal is to document our implementation: which functions work, and how well.  We haven't reached even that goal yet.  <P> The reference manual is generated with <a href="http://www.stack.nl/~dimitri/doxygen/">Doxygen</a>.
+The FreeTDS <a href="/reference/">Reference Manual</a> is our start at documenting the APIs.  In general, the definitive API documentation is available online from the vendors.  It will be a big job for us to replace that, and at the rate we're going, we never will.  Our first goal is to document our implementation: which functions work, and how well.  We haven't reached even that goal yet.  The reference manual is generated with <a href="http://www.stack.nl/~dimitri/doxygen/">Doxygen</a>.
 </td></tr>
 
 <tr><td>&nbsp;</td></tr>
