@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="iso-8859-1" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
-<!-- $Id: index.html,v 1.7 2005-05-26 04:57:50 jklowden Exp $ -->
+<!-- $Id: index.html,v 1.8 2006-03-24 18:06:17 jklowden Exp $ -->
 <head>
 <title>FreeTDS.org</title>
 </head>
@@ -51,28 +51,33 @@ Home&nbsp;&nbsp;|&nbsp;
 </tr>
 <tr>
 <td nowrap="nowrap" bgcolor="#c9c9ff">
-<b>Latest Versions:</b><br />
-	&nbsp;&nbsp;<a
-	href="ftp://ftp.ibiblio.org/pub/Linux/ALPHA/freetds/stable/freetds-stable.tgz">Stable Release</a><br />
+<b>Latest Versions</b>
+	<ul>
+		<li><a
+	href="ftp://ftp.ibiblio.org/pub/Linux/ALPHA/freetds/stable/freetds-stable.tgz">Stable Release</a></li>
+		<li><a href="ftp://ftp.ibiblio.org/pub/Linux/ALPHA/freetds/current/freetds-current.tgz">Nightly Snapshot</a></li>
+	</ul>
 
-<!-- the release candidate >
-	&nbsp;&nbsp;<a href="ftp://ftp.ibiblio.org/pub/Linux/ALPHA/freetds/current/freetds-release-candidate.tgz">0.62 Release Candidate</a><br />
-< end of rc -->
-	&nbsp;&nbsp;<a href="ftp://ftp.ibiblio.org/pub/Linux/ALPHA/freetds/current/freetds-current.tgz">Nightly Snapshot</a><br />
+<b>Documentation</b>
+	<ul>
+		<li><a href="faq.html">FAQ</a></li>
+		<li><a href="/userguide/">User Guide</a></li>
+		<li><a href="/reference/">Reference Manual</a></li>
+	</ul>
 
-<br />
-<b>Documentation:</b><br />
-&nbsp;&nbsp;<a href="faq.html">FAQ</a><br />
-&nbsp;&nbsp;<a href="/userguide/">User Guide</a><br />
-&nbsp;&nbsp;<a href="/reference/">Reference Manual</a><br />
-<br />
-<b>Mailing List:</b><br />
-&nbsp;&nbsp;<a href="http://lists.ibiblio.org/mailman/listinfo/freetds">Subscribe</a><br />
-&nbsp;&nbsp;<a href="http://lists.ibiblio.org/pipermail/freetds/">Archive</a><br />
-<br />
-<b>Developing:</b><br />
-&nbsp;&nbsp;<a href="http://sourceforge.net/projects/freetds/">Source Forge project site</a><br />
-&nbsp;&nbsp;<a href="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/freetds/">Browse CVS</a><br /><br />
+<b>Mailing List</b>
+	<ul>
+		<li><a href="http://lists.ibiblio.org/mailman/listinfo/freetds">Subscribe</a></li>
+		<li><a href="http://lists.ibiblio.org/pipermail/freetds/">Archive</a></li>
+	</ul>
+
+
+<b>Developing</b>
+	<ul>
+		<li><a href="http://sourceforge.net/projects/freetds/">Source Forge project site</a></li>
+		<li><a href="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/freetds/">Browse CVS</a></li>
+		<li><a href="http://freetds.sourceforge.net/out/test/vgtest65.html">Nightly test results</a>  </li>
+	</ul>
 </td>
 </tr>
 </table>
@@ -86,7 +91,7 @@ Home&nbsp;&nbsp;|&nbsp;
 <img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0!" height="31" width="88" />
 </a>
 </p>
-<p>Last updated by $Author: jklowden $ on $Date: 2005-05-26 04:57:50 $</p>
+<p align="right">Last updated by $Author: jklowden $ on $Date: 2006-03-24 18:06:17 $</p>
 
 </body>
 </html>
