@@ -1,3 +1,6 @@
+Fri Mar 24 13:03:36 EST 2006	JK Lowden <jklowden@schemamania.org>
+	* doc/htdoc/docs.html doc/htdoc/index.html updated
+
 Fri Mar 24 12:36:02 EST 2006	JK Lowden <jklowden@schemamania.org>
 	* doc/htdoc/software.html fixed broken links added link to RC
 
